<resources>
    <string name="app_name">Supermercado Varejo e Atacado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="carrinho">Carrinho</string>
    <string name="pesquisa">Pesquisa</string>


    <string name="produtos">Produtos</string>
    <string name="ofertas">Ofertas</string>
    <string name="minhaLista">Minha Lista</string>
    <string name="lojas">Lojas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mias_vendidos">Mais vendidos</string>
    <string name="vertodos">Ver todos</string>
    <string name="alimentosbasicos">Alimentos Básicos</string>
    <string name="bebidasalcoolicas">Bebidas</string>
    <string name="hortifruti">Hortifruti</string>
    <string name="adicionarcarrinho">Adicionar ao Carrinho</string>
    <string name="estoque">Estoque</string>
    <string name="totalnocarrinho">Total no carrinho</string>
    <string name="subtototal">Subtotal</string>
    <string name="entrega">Entrega</string>
    <string name="mudar_endereco">Mudar Endereço</string>
    <string name="concluir_compra">Concluir compra</string>
</resources>