<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_produtos"
            android:icon="@drawable/ic__home_24"
            android:title="@string/produtos" />
        <item
            android:id="@+id/nav_ofertas"
            android:icon="@drawable/ic_ofertar_24"
            android:title="@string/ofertas" />
        <item
            android:id="@+id/nav_minhaLista"
            android:icon="@drawable/ic_lista_24"
            android:title="@string/lojas" />
        <item
            android:id="@+id/nav_lojas"
            android:icon="@drawable/ic_lojas_24"
            android:title="@string/lojas" />
    </group>
</menu>